<resources>
    <string name="app_name">LectureTask</string>
    <string name="count_label">Question number %d</string>
    <string name="question">question</string>
    <string name="choice">choice</string>
    <string name="result_title">Result</string>
    <string name="result_score">Number of right answers %d</string>
    <string name="btn_try_again">Exit</string>
    <string name="btn_exit">Save result</string>

</resources>